--- a/www/index.html
+++ b/www/index.html
@@ -83,8 +83,7 @@
                     pNode.children.push(row);
                 }
             }
-            console.log(parentKeyNodes.root);
-            return parentKeyNodes[attributes.rootParentId];
+            return parentKeyNodes;
         }
 
         // 属性配置信息
