--- a/test2/test1.html
+++ b/test2/test1.html
@@ -9,27 +9,65 @@
 </head>
 
 <body>
-    <script>
+    <div id="container">
 
-        var mock = [
-            { "id": 0, "name": "root", "pid": -1 },
-            { "id": 1, "name": "总部", "pid": 0 },
-            { "id": 6, "name": "工程部", "pid": 1 },
-            { "id": 7, "name": "工程部1", "pid": 6 },
-            { "id": 8, "name": "工程部2", "pid": 7 },
-            { "id": 9, "name": "工程部3", "pid": 8 },
-            { "id": 10, "name": "测试部", "pid": 1 },
-            { "id": 11, "name": "测试部1", "pid": 10 },
-            { "id": 12, "name": "测试部2", "pid": 11 },
-            { "id": 13, "name": "生产部", "pid": 1 },
-            { "id": 14, "name": "规划部", "pid": 1 },
-            { "id": 15, "name": "市场部", "pid": 1 },
-        ];
+    </div>
+    <script>
+        var mock = [{
+            "id": 0,
+            "name": "root",
+            "pid": -1
+        }, {
+            "id": 1,
+            "name": "总部",
+            "pid": 0
+        }, {
+            "id": 6,
+            "name": "工程部",
+            "pid": 1
+        }, {
+            "id": 7,
+            "name": "工程部1",
+            "pid": 6
+        }, {
+            "id": 8,
+            "name": "工程部2",
+            "pid": 7
+        }, {
+            "id": 9,
+            "name": "工程部3",
+            "pid": 8
+        }, {
+            "id": 10,
+            "name": "测试部",
+            "pid": 1
+        }, {
+            "id": 11,
+            "name": "测试部1",
+            "pid": 10
+        }, {
+            "id": 12,
+            "name": "测试部2",
+            "pid": 11
+        }, {
+            "id": 13,
+            "name": "生产部",
+            "pid": 1
+        }, {
+            "id": 14,
+            "name": "规划部",
+            "pid": 1
+        }, {
+            "id": 15,
+            "name": "市场部",
+            "pid": 1
+        }, ];
+
         function Children() {
             this.list = [];
         }
 
-        Children.prototype.addChild = function (node) {
+        Children.prototype.addChild = function(node) {
             this.list.push(node);
         }
 
@@ -38,25 +76,27 @@
             this.name;
             this.pid;
             this.parentNode = null;
-            this.visible = true;
             this.children = new Children();
         }
 
-        Node.prototype.addChild = function (node) {
+        Node.prototype.addChild = function(node) {
             this.children.addChild(node);
         }
 
         function MultipleTree(config) {
             var conf = config;
             this.data = conf.data;
-            this.root = this.init(conf);
+            this.nodeList = [];
+            this.rootList = this.init(this.data);
+            this.root = this.rootList.filter(function(item) {
+                return item.id === conf.rootId;
+            });
         }
 
-        MultipleTree.prototype.init = function (conf) {
-            var dataList = this.data;
+        MultipleTree.prototype.init = function(dataList) {
             var nodeList = [];
+            var rootList = [];
             // 根节点
-            var root = new Node();
             // 根据结果集构造节点列表（存入散列表）
             for (var i in dataList) {
                 var value = dataList[i];
@@ -64,52 +104,130 @@
                 node.id = value['id'];
                 node.name = value['name'];
                 node.pid = value['pid'];
+                node.values = value;
                 nodeList[node.id] = node;
             }
+            this.nodeList = nodeList;
             for (var i in nodeList) {
                 var node = nodeList[i];
-                if (conf.rootId == node.id) {
-                    root = node;
-                } else {
+
+                if (nodeList[node.pid]) {
                     nodeList[node.pid].addChild(node);
                     node.parentNode = nodeList[node.pid];
+                } else {
+                    rootList.push(node);
                 }
             }
-            return root;
+            return rootList;
         }
 
+        MultipleTree.prototype.getTree = function(conf) {
+            return this.rootList;
+        }
+
+        MultipleTree.prototype.getRoot = function(conf) {
+            return this.root;
+        }
         var config = {
             data: mock,
-            rootId: 0
+            rootId: 1
+        };
+        // var mul = new MultipleTree(config);
+
+        // console.log(mul);
+
+        var mock2 = [{
+            id: 1,
+            pid: 0,
+            name: 1
+        }, {
+            id: 2,
+            pid: 1,
+            name: 2
+        }, {
+            id: 3,
+            pid: 1,
+            name: 3
+        }, {
+            id: 4,
+            pid: 1,
+            name: 4
+        }, {
+            id: 5,
+            pid: 1,
+            name: 5
+        }, {
+            id: 6,
+            pid: 1,
+            name: 6
+        }, {
+            id: 7,
+            pid: -1,
+            name: 7
+        }];
+
+        var config2 = {
+            data: mock2,
+            rootId: 1
+        };
+
+        // var mul2 = new MultipleTree(config2);
+
+        // console.log(mul2);
+        // console.log(mul2.getTree());
+
+        function TreeDom(config) {
+            MultipleTree.call(this, config);
+
+            var createUl = function() {
+                return document.createElement("ul");
+            }
+
+            var createLi = function() {
+                return document.createElement("li");
+            }
+
+            var createSpan = function() {
+                return document.createElement("span");
+            }
+
+            var createTreeDom = function() {
+                var container = document.createElement("div");
+                var data = this.getTree();
+
+                function create(data, container) {
+                    var ul = createUl();
+                    var li = createLi();
+                    var span = createSpan();
+                    span.innerHTML = data.values.name;
+                    span.className = "node-name";
+                    li.appendChild(span);
+                    li.className = "node-li";
+                    ul.appendChild(li);
+                    container.appendChild(ul);
+                    for (var i = 0; i < data.children.list.length; i++) {
+                        if (data.children.list.length) {
+                            create(data.children.list[i], li);
+                        }
+                    }
+                    return container;
+                }
+
+                data.forEach(function(rootItem) {
+                    container.appendChild(create(rootItem, document.createElement("div")));
+                }, this);
+
+                return container;
+            }
+
+            this.getTreeDom = createTreeDom;
         }
-        var mul = new MultipleTree(config);
 
-        console.log(mul);
+        TreeDom.prototype = MultipleTree.prototype;
 
-        var mock1 = [
-            { id: 0, pid: -1, name: "随意勾选 1", open: true },
-            { id: 1, pid: 0, name: "随意勾选 1", open: true },
-        { id: 11, pid: 1, name: "随意勾选 1-1", open: true },
-        { id: 111, pid: 11, name: "随意勾选 1-1-1" },
-        { id: 112, pid: 11, name: "随意勾选 1-1-2" },
-        { id: 12, pid: 1, name: "随意勾选 1-2", open: true },
-        { id: 121, pid: 12, name: "随意勾选 1-2-1" },
-        { id: 122, pid: 12, name: "随意勾选 1-2-2" },
-        { id: 2, pid: 0, name: "随意勾选 2", checked: true, open: true },
-        { id: 21, pid: 2, name: "随意勾选 2-1" },
-        { id: 22, pid: 2, name: "随意勾选 2-2", open: true },
-        { id: 221, pid: 22, name: "随意勾选 2-2-1", checked: true },
-        { id: 222, pid: 22, name: "随意勾选 2-2-2" },
-        { id: 23, pid: 2, name: "随意勾选 2-3" }];
-
-
-        var config1 = {
-            data: mock1,
-            rootId: 0
-        }
-
-        var mul1 = new MultipleTree(config1);
-        console.log(mul1);
+        var tree = new TreeDom(config2);
+        var treeDom = tree.getTreeDom();
+        document.getElementById("container").appendChild(treeDom);
     </script>
 </body>
 
